[package]
name = "trade_0slot_example_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
solana-sdk = "1.9.0"
solana-client = "1.9.0"
bs58 = "0.4.0"
structopt = "0.3.0"
tokio = { version = "1.0", features = ["full"] }